--- a/src/index.css
+++ b/src/index.css
@@ -1,281 +1,270 @@
-*{
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-
-.header{
-  width: 100%;
-  line-height: 70px;
-  background-color: cyan;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 10px;
-  color: black;
-  box-shadow: 5px 3px 15px -5px black;
-  position: relative;
+.header {
+	width: 100%;
+	line-height: 70px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 10px;
+	color: rgb(120, 230, 70);
+	box-shadow: 5px 3px 15px -5px black;
+	position: relative;
 }
-.header img{
-  position: relative;
+.header img {
+	position: relative;
 }
-.header h1{
-  font-size: 5.50rem;
-  position: relative;
-  display: flex;
-  flex-flow: row wrap;
-  font-weight: 900;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin-left: 15px;
-  padding-left: 20px;
-  text-shadow: 2px 8px 15px  rgb(17, 17, 17),
-              2px 8px 15px rgb(8, 5, 5);
+.header h1 {
+	font-size: 5.5rem;
+	position: relative;
+	display: flex;
+	flex-flow: row wrap;
+	font-weight: 900;
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+	margin-left: 15px;
+	padding-left: 20px;
+	text-shadow: 2px 8px 15px rgb(17, 17, 17), 2px 8px 15px rgb(8, 5, 5);
 }
 
-
-.main_note{
-  width: 500px;
-  position: relative;
-  padding: 15px 10px 5px 10px;
-  margin: 20px auto;
-  padding-right: 28px;
-  padding-left: 10px;
+.main_note {
+	width: 500px;
+	position: relative;
+	padding: 15px 10px 5px 10px;
+	margin: 20px auto;
+	padding-right: 28px;
+	padding-left: 10px;
 }
 
-input{
-  width: 50%;
-  line-height: 30px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  margin: 10px 0;
-  font-weight: bold;
+input {
+	width: 50%;
+	line-height: 30px;
+	background: transparent;
+	border: none;
+	outline: none;
+	font-size: 1rem;
+	margin: 10px 0;
+	font-weight: bold;
 }
-form{
-  min-height: 50px;
-  font-size: 15px;
-  font-weight: 900;
-  color: white;
-  background-color: rgb(247, 247, 185);
-  padding: 15px 10px 5px 10px;
-  box-shadow: 3px 5px 15px -5px black;
-  border-radius: 10px;
-  position: relative;
+form {
+	min-height: 50px;
+	font-size: 15px;
+	font-weight: 900;
+	color: white;
+	background-color: rgb(247, 247, 185);
+	padding: 15px 10px 5px 10px;
+	box-shadow: 3px 5px 15px -5px black;
+	border-radius: 10px;
+	position: relative;
 }
-.main_note input{
-  font-size: 25px;
-  font-weight: 900;
+.main_note input {
+	font-size: 25px;
+	font-weight: 900;
 }
-textarea{
-  width: 50%;
-  line-height: 30px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  margin: 10px 0;
-}
-
-.main_note .btn{
-  float: right;
-  margin-right: 2px;
-  color: rgb(9, 22, 206);
-  border: none;
-  width: 50px;
-  height: 50px;
-  background: transparent;
-  cursor: pointer;
-  outline: none;
-  box-shadow: 3px 3px 15px -10px darkgray;
-  border-radius: 50%;
+textarea {
+	width: 50%;
+	line-height: 30px;
+	background: transparent;
+	border: none;
+	outline: none;
+	font-size: 1rem;
+	margin: 10px 0;
 }
 
-.MuiButton-root .icon{
-  font-size: 25px !important;
-  font-weight: 900;
-  color: rgb(9, 22, 206);
-  cursor: pointer;
-  z-index: 222;
-  background: transparent;
-
+.main_note .btn {
+	float: right;
+	margin-right: 2px;
+	color: rgb(9, 22, 206);
+	border: none;
+	width: 50px;
+	height: 50px;
+	background: transparent;
+	cursor: pointer;
+	outline: none;
+	box-shadow: 3px 3px 15px -10px darkgray;
+	border-radius: 50%;
 }
 
-.MuiButton-root:hover{
-  background-color: black !important;
-  color: black;
+.MuiButton-root .icon {
+	font-size: 25px !important;
+	font-weight: 900;
+	color: rgb(9, 22, 206);
+	cursor: pointer;
+	z-index: 222;
+	background: transparent;
 }
 
-.MuiButton-root:hover .icon{
-  color: white;
-  background-color: black;
-} 
-
-
-.note .deletIcon{
- font-size: 25px !important;
-  font-weight: 900;
-  color: rgb(9, 22, 206);
-  cursor: pointer;
-  z-index: 222;
-  background: transparent;
-}
-.note{
-  background-color: rgb(166, 235, 240);
-  border-radius: 7px;
-  box-shadow: 0 2px 5px grey;
-  padding: 10px;
-  width: 250px;
-  min-height: 100px;
-  max-height: auto;
-  margin: 16px;
-  float: left;
-  display: flex;
-  position: relative;
-
+.MuiButton-root:hover {
+	background-color: black !important;
+	color: black;
 }
 
-.note h1{
+.MuiButton-root:hover .icon {
+	color: white;
+	background-color: black;
+}
 
-  width: 50%;
-  line-height: 1px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 2rem;
-  margin: 20px 0;
-  font-weight: bold;
+.note .deletIcon {
+	font-size: 25px !important;
+	font-weight: 900;
+	color: rgb(9, 22, 206);
+	cursor: pointer;
+	z-index: 222;
+	background: transparent;
+}
+.note {
+	background-color: rgb(166, 235, 240);
+	border-radius: 7px;
+	box-shadow: 0 2px 5px grey;
+	padding: 10px;
+	width: 250px;
+	min-height: 100px;
+	max-height: auto;
+	margin: 16px;
+	float: left;
+	display: flex;
+	position: relative;
+}
+
+.note h1 {
+	width: 50%;
+	line-height: 1px;
+	background: transparent;
+	border: none;
+	outline: none;
+	font-size: 2rem;
+	margin: 20px 0;
+	font-weight: bold;
 }
 .note p {
-  position: absolute;
-  float: left;
-  width: 50%;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 12px;
-  margin: 15px 0;
-  margin-top: 30px;
-  word-break: break-all;
-  white-space: pre-wrap;
+	position: absolute;
+	float: left;
+	width: 50%;
+	background: transparent;
+	border: none;
+	outline: none;
+	font-size: 12px;
+	margin: 15px 0;
+	margin-top: 30px;
+	word-break: break-all;
+	white-space: pre-wrap;
 }
 
-
-.note .btn{
- position: relative;
-  float: right;
-  margin-right: 0;
-  margin-top: 35px;
-  margin-left: 60px;
-  color: rgb(9, 22, 206);
-  border: none;
-  width: 50px;
-  height: 50px;
-  background: transparent;
-  cursor: pointer;
-  outline: none;
-  box-shadow: 3px 3px 15px -10px darkgray;
-  border-radius: 50%;
+.note .btn {
+	position: relative;
+	float: right;
+	margin-right: 0;
+	margin-top: 35px;
+	margin-left: 60px;
+	color: rgb(9, 22, 206);
+	border: none;
+	width: 50px;
+	height: 50px;
+	background: transparent;
+	cursor: pointer;
+	outline: none;
+	box-shadow: 3px 3px 15px -10px darkgray;
+	border-radius: 50%;
 }
 
-.note .btn:hover{
-  background-color: black !important;
+.note .btn:hover {
+	background-color: black !important;
 }
 
-.note .btn:hover .deletIcon{
-  color: #fff;
-  background-color: black !important;
+.note .btn:hover .deletIcon {
+	color: #fff;
+	background-color: black !important;
 }
 
-.footer{
-  width: 100%;
-  position: relative;
-  display : flex;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  flex-flow: row wrap;
-  flex-direction: column;
-  bottom: 0;
-  text-align: center;
-  margin-top: 41rem;
-  font-size: 1.5rem;
-  background-color: lightcyan;
-   overscroll-behavior: auto;
-   overflow: hidden;
+.footer {
+	width: 100%;
+	position: relative;
+	display: flex;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	flex-flow: row wrap;
+	flex-direction: column;
+	bottom: 0;
+	text-align: center;
+	margin-top: 41rem;
+	font-size: 1.5rem;
+	background-color: lightcyan;
+	overscroll-behavior: auto;
+	overflow: hidden;
 }
 
-@media only screen and (max-width: 768px){
-.header{
-  width: 100vw;
+@media only screen and (max-width: 768px) {
+	.header {
+		width: 100vw;
+	}
+	.header img {
+		width: 10vw;
+		height: 5vh;
+	}
+	.header h1 {
+		font-size: 3rem;
+	}
+	form {
+		width: 55vw;
+		align-items: center;
+		display: flex;
+		justify-content: center;
+	}
 }
-.header img{
-  width: 10vw;
-  height: 5vh;
-}
-.header h1{
-  font-size: 3rem;
-}
-form{
-  width: 55vw;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-
-}
-@media only screen and (max-width: 480px){
-.header{
-  width: 100vw;
-}
-.header img{
-  width: 10vw;
-  height: 5vh;
-}
-.header h1{
-  font-size: 2rem;
-}
-form{
-  width: 75vw;
-  justify-content: center;
-  font-size: 5px;
-  white-space: pre-wrap;
-  margin-left: 10px;
-}
-.main_note input{
-  font-size: 2rem;
-  margin-bottom: 50px;
-}
-.main_note textarea{
-  width: 55vw;
-  line-height: 10px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  margin-top: 20px;
-  position: absolute;
-  float: left;
-  margin-left: 4px;
-}
-.main_note .btn{
-  position: relative;
-  float: right;
-  margin-right: 5px;
-  width: 4vw;
-  height: 5vh;
-}
-.MuiButton-root .icon{
-  font-size: 1.5rem !important;
-  font-weight: 700;
-  width: 10vw;
-  height: 2vh;
-}
-.note{
-  width: 50vw;
-  height: 5vh;
-}
+@media only screen and (max-width: 480px) {
+	.header {
+		width: 100vw;
+	}
+	.header img {
+		width: 10vw;
+		height: 5vh;
+	}
+	.header h1 {
+		font-size: 2rem;
+	}
+	form {
+		width: 75vw;
+		justify-content: center;
+		font-size: 5px;
+		white-space: pre-wrap;
+		margin-left: 10px;
+	}
+	.main_note input {
+		font-size: 2rem;
+		margin-bottom: 50px;
+	}
+	.main_note textarea {
+		width: 55vw;
+		line-height: 10px;
+		background: transparent;
+		border: none;
+		outline: none;
+		font-size: 1rem;
+		margin-top: 20px;
+		position: absolute;
+		float: left;
+		margin-left: 4px;
+	}
+	.main_note .btn {
+		position: relative;
+		float: right;
+		margin-right: 5px;
+		width: 4vw;
+		height: 5vh;
+	}
+	.MuiButton-root .icon {
+		font-size: 1.5rem !important;
+		font-weight: 700;
+		width: 10vw;
+		height: 2vh;
+	}
+	.note {
+		width: 50vw;
+		height: 5vh;
+	}
 }
